end of class checkpin

--- a/font.html
+++ b/font.html
@@ -1,16 +1,21 @@
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teams</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        div {
+            font-family: Arial,sans-serif;
+            font-size: 25px;
+            font-weight:bolder;
+        }
+    </style>
   </head>
   <body>
-    <h1 >Hello Class!</h1>
-    <p>This is my paragraph</p>
-    <h1>Hello UAA 490 Class!</h1>
-    <h1>Last Chance</h1>
-    <p>Offer ends by midnight</p>
+    <div>
+        Hello, world!
+    </div>
   </body>
 </html>
